<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/test_download_btn"
            android:text="@string/download_file_test"
            android:padding="20dp"
            android:layout_marginBottom="10dp"/>


        <TextView
            android:id="@+id/time_taken"
            android:text="@string/time_taken"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/kilobyte_per_sec"
            android:text="@string/kilobyte_per_sec"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/download_speed"
            android:text="@string/download_speed"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/file_size"
            android:text="@string/file_size"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <ProgressBar
            android:id="@+id/download_running_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/bandwidth_type"
            android:textSize="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




    </LinearLayout>

</LinearLayout>